--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "node app.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~10.1.1",
     "@angular/cdk": "^10.2.0",
     "@angular/common": "~10.1.1",
@@ -27,8 +28,11 @@
     "@angular/router": "~10.1.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "ngx-material-timepicker": "^5.5.3",
+    "ol": "^6.4.3",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "signature_pad": "^3.0.0-beta.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
