--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shift-manager",
+  "name": "shift-plan",
   "version": "0.0.0",
   "engines": {
     "npm": "5.7.1",
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +28,7 @@
     "@angular/router": "~10.1.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "moment": "^2.29.1",
     "ngx-material-timepicker": "^5.5.3",
     "ol": "^6.4.3",
     "path": "^0.12.7",
